methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:43: error: Unmatched closing brace '}' ignored here
}
^